--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.13.2",
     "less": "^3.11.2",
     "less-loader": "^6.1.0",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
     "vuex": "^3.4.0"
